# new_pipeline

./: .gitignore  README.md  conftest.py  pyproject.toml  test_imports.py
docs/: GATK_vcf.md  out.gv
docs/md/: bwa_align.md  cnv.md  count2.md  dup_indels.md  enrichment.md  extract_identity.md  picard_actions.md  picard_metrics.md  picard_qc.md  pipeline.md  process_iendity.md  recalibration.md  snpEff_ann.md  uniformity.md  utils.md  variants_GATK.md  variants_GATK3.md  variants_freebayes.med  variants_octopus.md
docs/source/: bwa_align.rst  conf.py  index.rst  pipeline.rst
docs/validation/TME/: MDL_TME_Long Form_Variant_Calling.docx  ~$L_TME_Long Form_Variant_Calling.docx
docs/validation/cnv/: CNV_Duplication samples.xlsx  CNV_pipeline_validation.xlsx  CNV_problemregions.xlsx  CNV_qPCR_problems.xlsx  cnv_validation.py  cnv_validation2.py  cnv_validation3.py
docs/validation/docs/: .buildinfo  applications.html  code.html  code_data_mgmt.html  code_webapps.html  (+11 more)
src/: __init__.py  log_handler.py  pipeline.py  vep_ann.py
src/lib/: GATK_vcf.py  __init__.py  bcftools_ann.py  bwa_align.py  cnv.py  count2.py  db_logger.py  dup_indels.py  enrichment.py  extract_identity.py  log_api.py  picard_actions.py  picard_metrics.py  picard_parser.py  picard_qc.py  process_identity.py  recalibration.py  snpEff_ann.py  sv_calling.py  sv_pipeline.py  uniformity.py  utils.py  variants_GATK.py  variants_GATK3.py  variants_deep.py  variants_freebayes.py  variants_octopus.py  variants_table.py  vep_ann.py
src/utils/: clickhouse_manager.py
tests/: test_main.py  test_pipeline.py
(+541 files in other folders)
