[tool.poetry]
name = "pipeline"
version = "1.0.2"
description = ""
authors = ["nuin <nuin@genedrift.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.3"
PyVCF3 = "^1.0.3"
pysam = "^0.21.0"
python-dotenv = "^1.0.0"
rich = "^13.4.2"
pyyaml = "^6.0"
click = "^8.1.5"
suds-py3 = "^1.4.5.0"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
isort = "^5.12.0"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
test = "pytest"


[tool.pytest.ini_options]
pythonpath = ["."]